--- a/portfolio.css
+++ b/portfolio.css
@@ -144,12 +144,14 @@ nav a:hover {
 
 /*PROJETS*/
 
+#projects {
+    background-color: #FEC8D8;
+}
+
 .project {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 20px;
-    background-color: #FEC8D8;
 }
 
 .first,
@@ -224,5 +226,5 @@ input [type=button] {
     width: 100%;
     height: 150px;
     padding-top: 20px;
-    background-color: lightyellow;
+    background-color: #E0BBE4;
 }
