--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     margin: 0;
     padding: 0;
     background-size: 100%;
-    border: 1px solid black;
+    /*border: 1px solid black;*/
 
 }
 
@@ -161,3 +161,78 @@ article {
 }
 
 
+
+
+
+
+/*ABOUT*/
+h1{
+    text-align: center;
+}
+
+.about{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+
+
+.parent {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+}
+
+.div1 { grid-area: 1 / 2 / 2 / 3; }
+.div2 { grid-area: 1 / 4 / 2 / 5; }
+.div3 { grid-area: 3 / 2 / 4 / 3; }
+.div4 { grid-area: 3 / 4 / 4 / 5; }
+.div5 { grid-area: 4 / 3 / 5 / 4; }
+
+.div1{
+    background-color: yellow;
+    background-size: cover;
+    text-align: center;
+}
+
+.div2{
+    background-color: red;
+    background-size: cover;
+    text-align: center;
+}
+
+.div3{
+    background-color: dodgerblue;
+    background-size: cover;
+    text-align: center;
+}
+
+.div4{
+    background-color: blueviolet;
+    background-size: cover;
+    text-align: center;
+}
+
+.div5{
+    background-color: green;
+    background-size: cover;
+    text-align: center;
+}
+
+.div5 a, .div2 a, .div4 a{
+    color: black;
+}
+
+.div5 a:hover, .div2 a:hover, .div4 a:hover{
+    color: fuchsia;
+    text-shadow: 1px 1px lightpink;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 480px) {
+  .parent{
+      display: flex;
+      flex-direction: column;
+  }
+}
