--- a/style/header.css
+++ b/style/header.css
@@ -115,3 +115,33 @@ li:hover{
 [type="checkbox"]:not(:checked), [type="checkbox"]:checked {
     display: none;
 }
+
+
+/*footer*/
+
+footer{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.social{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+}
+
+
+.infos_footer{
+    display: flex;
+    flex-direction: column;
+    margin: 20px;
+    justify-content: space-between;
+
+}
+
+
+.social h3{
+    margin: 20px;
+}
