--- a/style/header.css
+++ b/style/header.css
@@ -51,7 +51,8 @@ li:hover{
 
 
 #trigger, #burger, #burger:before, #burger:after {
-    position: absolute;
+    /*position: absolute;*/
+    position: fixed;
     top: 25px;
     left: 25px;
     background: deeppink;
@@ -59,7 +60,7 @@ li:hover{
     height: 5px;
     transition: .2s ease;
     cursor: pointer;
-    z-index: 1;
+    z-index: 2;
 }
 #trigger {
     height: 25px;
@@ -96,15 +97,17 @@ li:hover{
     transition: transform .2s ease;
 }
 #menu {
-    position: absolute;
+    /*position: absolute;*/
     margin: 0; padding: 0;
     width: 110px;
     height: 110px;
-    background-color: rgba(255, 182, 193, 0.5);
+    background-color: rgba(255, 182, 193, 1);
     border-bottom-right-radius: 100%;
     box-shadow: 0 2px 5px rgba(0,0,0,0.26);
     animation: not-checked-anim .2s both;
     transition: .2s;
+    z-index: 1;
+    position: fixed;
 }
 #menu-toggle:checked + #trigger + #burger + #menu {
     animation: checked-anim 1s ease both;
