--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ main {
 
 }
 
-
+/*
 article {
     justify-content: space-around;
     align-items: center;
@@ -38,7 +38,7 @@ article {
     height: 100%;
 }
 
-
+*/
 
 
 
@@ -80,26 +80,109 @@ article {
     background-color: rgba(255, 182, 193, 0.5);
 }
 
-.portfolio{
-    background-color: rgba(220, 220, 220, 0.5);
+
+/*BACKGROUND CHANGE*/
+.background_change{
+    display: flex;
+    flex-direction: column;
+    margin-top: 150px;
+    margin-right:20px;
+    z-index: 1;
+
 }
+
+.btn{
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    margin: 15px;
+}
+button {
+    display:block;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    border: 2px solid black;
+    margin: 15px;
+
+
+}
+
+button:hover{
+    text-decoration: underline;
+    font-weight: bold;
+}
+
+.blue{
+    background-color: lightskyblue;
+}
+.red{
+    background-color: lightcoral;
+}
+
+.yellow {
+    background-color: yellow;
+}
+
+
+.pink{
+    background-color: pink;
+}
+
+.green{
+    background-color: chartreuse;
+}
+
+.orange{
+    background-color: orange;
+}
+
+.gray{
+    background-color: slategray;
+}
+
+.mint{
+    background-color: honeydew;
+}
+
+.lavender{
+    background-color: lavender;
+}
+
 
 
 /*PORTFOLIO*/
 
-.main_portfolio{
-    background-color: lightgray;
-}
+/*SCROLL*/
 
-.progress
-{
-    background-color: violet;
+
+.scroll_to_top {
+    display: flex;
+    flex-direction: column;
     position: fixed;
-    width: 0;
-    height: 30px;
+    top: 5%;
+    right: 0;
+    z-index: 0;
+
 
 }
 
+
+
+
+/*ARROW*/
+.arrow{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+
+
+
+
+/*PRESENTATION*/
 
 .text{
     text-align: center;
@@ -154,6 +237,10 @@ article {
 
 }
 
+
+
+/*COMPETENCES*/
+
 .competences{
     display: flex;
     flex-direction: column;
@@ -174,35 +261,53 @@ article {
 .comp{
     display: flex;
     flex-direction: column;
-    width: 400px;
+    width: 100%;
     height: 400px;
     background-color: white;
-    margin: 20px;
     text-align: center;
     box-shadow: 2px 2px 2px white;
     border-radius: 20px;
-    overflow: hidden;
-    background-color: rgba(100,149,237, 0.5);
+    background-color: rgba(255, 255, 255, 0.7);
+    overflow-y: auto;
 }
 
 @media (max-width: 1000px) {
 
-    .columns{
+    .comp{
         display: flex;
         flex-direction: column;
-        align-self: center;
+
     }
 
-}
-
-.comp h4 {
-    font-size: 1.2em;
-
-
 
 }
 
-.comp p{
-    font-size: 1.1em;
+.column{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-around;
 
 }
+
+
+
+
+
+/*PROJETS*/
+
+.work{
+    width: 100%;
+    height: 500px;
+    background-color: grey;
+    display: flex;
+    flex-direction: column;
+}
+
+.bloc1, .bloc2, .bloc3, .bloc4{
+    display: flex;
+    flex-direction: row;
+}
+
+
+
