--- a/style.css
+++ b/style.css
@@ -80,6 +80,9 @@ article {
     background-color: rgba(255, 182, 193, 0.5);
 }
 
+.portfolio{
+    background-color: mediumspringgreen;
+}
 
 /*BACKGROUND CHANGE*/
 .background_change{
@@ -156,6 +159,10 @@ button:hover{
 
 /*PORTFOLIO*/
 
+
+
+
+
 /*SCROLL*/
 
 
@@ -166,12 +173,13 @@ button:hover{
     top: 5%;
     right: 0;
     z-index: 0;
-
-
 }
 
 
+.scroll_to_top a{
+    background-color: transparent;
 
+}
 
 /*ARROW*/
 .arrow{
@@ -181,7 +189,21 @@ button:hover{
 
 }
 
-
+@-webkit-keyframes arrow-jump {
+    0%   { opacity: 0;}
+    100% { opacity: 1;
+        -webkit-transform: translateY(10px);
+        -moz-transform: translateY(10px);
+        -o-transform: translateY(10px);
+        transform: translateY(10px);
+    }
+}
+.arrow {
+    -webkit-animation: arrow-jump 1.5s infinite;
+    -moz-animation:    arrow-jump 1.5s infinite;
+    -o-animation:      arrow-jump 1.5s infinite;
+    animation:         arrow-jump 1.5s infinite;
+}
 
 
 
@@ -219,14 +241,6 @@ button:hover{
     width: 50%;
 }
 
-.textme{
-    display: flex;
-    flex-direction: column;
-    text-align: justify;
-    width: 80%;
-    margin-left: 10%;
-    font-size: 1.1em;
-}
 
 .image{
     display: flex;
