--- a/style.css
+++ b/style.css
@@ -268,6 +268,8 @@ button:hover{
 .competences h3{
     text-align: center;
     font-size: 1.5em;
+    margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 .columns{
@@ -280,7 +282,7 @@ button:hover{
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 400px;
+    height: 350px;
     background-color: white;
     text-align: center;
     box-shadow: 2px 2px 2px white;
@@ -337,7 +339,7 @@ button:hover{
 
 @media (max-width: 1000px){
     .work{
-        height: 500px;
+        height: 600px;
     }
 
     .projet{
@@ -348,13 +350,46 @@ button:hover{
 }
 
 
+.plus{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center ;
+    margin-bottom: 20px;
+}
 
+
+.plus img{
+    display: flex;
+    flex-direction: row;
+}
+
+.plus img {
+    opacity: 0.5;
+    filter: invert(100%);
+    transition: 0.5s;
+}
+
+.plus a{
+    color: white;
+    display: inline;
+    background-color: transparent;
+    margin: auto;
+}
+
+.plus a:hover img {
+    opacity: 1;
+}
+
+.plus p{
+    text-align: center;
+}
 
 /*MAIL*/
 
 .mail{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     width: 100%;
     justify-content: center ;
     margin-bottom: 20px;
