--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@
 body {
     min-height: 100vh;
     justify-content: space-between;
-
+    background-color: mediumspringgreen;
     font-family: 'Inconsolata', monospace;
 
 }
@@ -42,17 +42,33 @@ article {
 
 */
 
+main{
+    display: flex;
+    flex-direction: row-reverse;
+}
 
+h1{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    font-size: 4em;
+    color: black;
+    margin: 20px;
+}
+
+a{
+    text-decoration: none;
+}
 
 
 /*BACKGROUND CHANGE*/
 .background_change{
     display: flex;
     flex-direction: column;
-    margin-top: 150px;
     z-index: 1;
     align-items: flex-end;
     margin-right: 30px;
+    margin-top: 20px;
 
 }
 
@@ -121,17 +137,14 @@ article {
 
 /*INDEX*/
 
-
-h1{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    margin: auto;
-    font-size: 4em;
-}
-
 /*AFFichage*/
 
+.bienvenue{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+}
 
 .text-box{
     border: 3px solid white;
@@ -141,12 +154,13 @@ h1{
     justify-content: center;
     align-items: center;
     animation: none;
-    text-align: center;
-    width: 80%;
+    width: 100%;
     height: auto;
     padding: 10px;
     border-radius: 10px;
     background-color: rgba(255, 255, 255, 0.5);
+    margin-bottom: 20px;
+    margin-left: 20px;
 }
 
 
@@ -154,8 +168,10 @@ h1{
 .text-box a {
     text-decoration: none;
     color: white;
-    font-size: 1.3em;
+    font-size: 1em;
     transition: 0.5s;
+    text-align: justify;
+
 }
 
 .text-box a:hover {
@@ -169,8 +185,9 @@ h1{
     opacity: 1;
     text-align: justify;
     text-shadow: 1px 1px #555555, -1px 1px #555555, 1px -1px #555555, -1px -1px #555555, 1px 1px 5px #555555;
-    font-size: 1.2em;
+    font-size: 1.5em;
     color: white;
+
 }
 
 
