--- a/style/style.css
+++ b/style/style.css
@@ -391,3 +391,76 @@ article {
     opacity: 1;
 }
 
+
+
+
+
+
+/*ABOUT*/
+
+main {
+    height: 100%;
+}
+
+main article {
+    display: flex;
+
+    position: relative;
+}
+
+
+h1{
+    text-align: center;
+}
+
+
+
+.Abdiv {
+    height: 50%;
+    width: 50%;
+    z-index: 0;
+    /*position: relative;*/
+    margin: 30px;
+    padding: 30px;
+    text-align: center;
+    border-radius: 20px;
+
+}
+
+
+#Div1 {
+    background-color: red;
+    background-size: contain;
+    border-collapse: collapse;
+    border: 2px solid black;
+
+
+}
+
+#Div2 {
+    background-color: deepskyblue;
+    background-size: contain;
+    border-collapse: collapse;
+    border: 2px solid black;
+
+}
+
+#Div3 {
+    background-color: lawngreen;
+    background-size: contain;
+    border-collapse: collapse;
+    border: 2px solid black;
+}
+
+
+
+
+.Div4 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 0;
+    animation: none;
+}
+
