--- a/style/style.css
+++ b/style/style.css
@@ -282,40 +282,18 @@ article {
 
 .work{
     width: 100%;
-    height: 1000px;
+    height: 800px;
     background-color: rgba(255, 255, 255, 0.5);
     display: flex;
-    flex-direction: column;
-    border-radius: 20px;
-}
-
-.bloc1, .bloc2{
-    display: flex;
     flex-direction: row;
-    justify-content: space-around;
-}
-
-.projet{
-    height: 400px;
-    width: 400px;
-
-}
-
-@media (max-width: 1000px){
-    .work{
-        height: 600px;
-    }
-
-    .projet{
-        height: 200px;
-        width: 200px;
-
-    }
+    border-radius: 20px;
+    overflow: hidden;
+    margin-right: 20px;
 }
 
 
 
-.plus{
+#plus{
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -324,37 +302,170 @@ article {
 }
 
 
-.plus img{
+#plus img{
     display: flex;
     flex-direction: row;
 }
 
-.plus img {
+#plus img {
     opacity: 0.5;
     filter: invert(100%);
     transition: 0.5s;
+    width:100px;
 }
 
-.plus a{
+#plus a{
     color: white;
     display: inline;
     background-color: transparent;
     margin: auto;
 }
 
-.plus a:hover img {
+#plus a:hover img {
     opacity: 1;
 }
 
-.plus p{
-    text-align: center;
+
+
+
+.slider {
+    height: 100%;
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-flow: row nowrap;
+    -ms-flex-flow: row nowrap;
+    flex-flow: row nowrap;
+    -webkit-box-align: end;
+    -webkit-align-items: flex-end;
+    -ms-flex-align: end;
+    align-items: flex-end;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
 }
 
 
+.slider__nav {
+    width: 12px;
+    height: 12px;
+    margin: 2rem 12px;
+    border-radius: 50%;
+    z-index: 10;
+    outline: 6px solid #ccc;
+    outline-offset: -6px;
+    box-shadow: 0 0 0 0 #333, 0 0 0 0 rgba(51, 51, 51, 0);
+    cursor: pointer;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+.slider__nav:checked {
+    -webkit-animation: check 0.4s linear forwards;
+    animation: check 0.4s linear forwards;
+}
+.slider__nav:checked:nth-of-type(1) ~ .slider__inner {
+    left: 0%;
+}
+.slider__nav:checked:nth-of-type(2) ~ .slider__inner {
+    left: -100%;
+}
+.slider__nav:checked:nth-of-type(3) ~ .slider__inner {
+    left: -200%;
+}
+.slider__nav:checked:nth-of-type(4) ~ .slider__inner {
+    left: -300%;
+}
+.slider__inner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 400%;
+    height: 100%;
+    -webkit-transition: left 0.4s;
+    transition: left 0.4s;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-flow: row nowrap;
+    -ms-flex-flow: row nowrap;
+    flex-flow: row nowrap;
+}
+.slider__contents {
+    height: 100%;
+    padding: 2rem;
+    text-align: center;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    -webkit-flex-flow: column nowrap;
+    -ms-flex-flow: column nowrap;
+    flex-flow: column nowrap;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    overflow: hidden;
+}
+.slider__image {
+    font-size: 2.7rem;
+    color: #2196F3;
+}
+.slider__caption {
+    font-weight: 500;
+    margin: 2rem 0 1rem;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+    text-transform: uppercase;
+}
 
+.slider img{
+width: 600px;
+}
 
+.slider__txt {
+    color: #999;
+    margin-bottom: 3rem;
+    max-width: 300px;
+}
 
+@-webkit-keyframes check {
+    50% {
+        outline-color: #333;
+        box-shadow: 0 0 0 12px #333, 0 0 0 36px rgba(51, 51, 51, 0.2);
+    }
+    100% {
+        outline-color: #333;
+        box-shadow: 0 0 0 0 #333, 0 0 0 0 rgba(51, 51, 51, 0);
+    }
+}
 
+@keyframes check {
+    50% {
+        outline-color: #333;
+        box-shadow: 0 0 0 12px #333, 0 0 0 36px rgba(51, 51, 51, 0.2);
+    }
+    100% {
+        outline-color: #333;
+        box-shadow: 0 0 0 0 #333, 0 0 0 0 rgba(51, 51, 51, 0);
+    }
+}
 
 
 
@@ -389,78 +500,5 @@ article {
 
 .mail a:hover img {
     opacity: 1;
-}
-
-
-
-
-
-
-/*ABOUT*/
-
-main {
-    height: 100%;
-}
-
-main article {
-    display: flex;
-
-    position: relative;
-}
-
-
-h1{
-    text-align: center;
-}
-
-
-
-.Abdiv {
-    height: 50%;
-    width: 50%;
-    z-index: 0;
-    /*position: relative;*/
-    margin: 30px;
-    padding: 30px;
-    text-align: center;
-    border-radius: 20px;
-
-}
-
-
-#Div1 {
-    background-color: red;
-    background-size: contain;
-    border-collapse: collapse;
-    border: 2px solid black;
-
-
-}
-
-#Div2 {
-    background-color: deepskyblue;
-    background-size: contain;
-    border-collapse: collapse;
-    border: 2px solid black;
-
-}
-
-#Div3 {
-    background-color: lawngreen;
-    background-size: contain;
-    border-collapse: collapse;
-    border: 2px solid black;
-}
-
-
-
-
-.Div4 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    z-index: 0;
-    animation: none;
 }
 
