--- a/style/projets.css
+++ b/style/projets.css
@@ -1,5 +1,5 @@
 
-/*GENERAL*/
+/******************************************GENERAL************************/
 
 * {
     margin: 0;
@@ -52,7 +52,7 @@ article {
 
 
 
-/*BACKGROUND*/
+/**************************BACKGROUND***********************************/
 .memory {
     background-color: #c394f8;
 }
@@ -65,7 +65,11 @@ background-color: #cceeff;
     background-color: #c8f4d5;
 }
 
-/*PROJETS*/
+
+
+/**********************************PROJETS****************************/
+
+/*****CAROUSEL****************/
 .main_projet1 {
     box-sizing: border-box;
     display: flex;
@@ -185,4 +189,22 @@ input[type=radio] {
 
 #item-3:checked ~ .player #test  {
     transform: translateY(-80px);
+}
+
+
+
+/******TEXTE********/
+
+.texte h1{
+    text-align: center ;
+    margin-bottom: 10px;
+}
+
+.texte p{
+    text-align: justify;
+    margin: 10px;
+    align-content: center;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
 }
