--- a/style/style.css
+++ b/style/style.css
@@ -544,74 +544,140 @@ article {
 
 /***************************************ABOUT**************************/
 
-.about h1{
-    text-align: center;
-    font-size: 6em;
-    margin-top: 200px;
+.about_me, .about_me::before, .about_me::after {
+    box-sizing: border-box;
 }
 
-@media (max-width: 1000px) {
-
-    .about_me{
-        display: flex;
-        flex-direction: column;
-    }
+.about_me {
+    display: flex;
+    flex-direction: row;
 
 
+
+}
+
+
+.about h1{
+    text-align: left;
+    font-size: 3.5em;
+    margin-top: 200px;
+    margin-bottom: auto;
+    writing-mode: vertical-rl;
+    text-orientation: mixed;
+    position: fixed;
 }
 
 /*****GRID*****/
 
-.parent {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
+.flexbox {
+    display: flex;
+    flex-direction: column;
+    max-width: 90%;
+    padding: calc(6% + 1.9vmin);
+    height: 1200px;
 }
 
-.div1 { grid-area: 2 / 2 / 3 / 3; }
-.div2 { grid-area: 2 / 4 / 3 / 5; }
-.div3 { grid-area: 3 / 3 / 4 / 4; }
-.div4 { grid-area: 4 / 2 / 5 / 3; }
-.div5 { grid-area: 4 / 4 / 5 / 5; }
 
+.card {
+    background-size: cover;
+    /* Change this based on the image main subject */
+    border-radius: 1.61803%;
 
-.div1, .div2, .div4, .div5{
+    /*     transition: all 1s ease-in; */
     border-collapse: collapse;
     border: 4px solid black;
-    padding: 20px;
-    text-align: center;
-}
-
-
-.div1{
-    background-color: yellow;
-}
-
-.div2{
-    background-color: red;
-}
-
-.div3 img{
-    overflow:hidden;
-    -webkit-border-radius:50px;
-    -moz-border-radius:50px;
-    border-radius:50px;
-    width:200px;
-    height:200px;
-    border-collapse: collapse;
-    border: 4px solid black;
-    margin-left: 20px;
-    margin-top: 20px;
 
 }
 
-.div4{
-    background-color: dodgerblue;
+.center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 
-.div5{
-    background-color: green;
+
+
+@supports (display: grid) {
+    @media screen and (min-width: 400px) {
+        /* Reset height from having an defined to percentage
+        and use spans to define size */
+        .lrg,
+        .med,
+        .sm {
+            height: 100%;
+        }
+
+        /* Margin replaced by grid gap */
+        .card {
+            margin: 0;
+        }
+
+        .grid-wrapper {
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 3fr 2fr 2fr 1fr;
+            display: grid;
+            height: 100%;
+            justify-content: center;
+            align-content: end;
+            grid-gap: 2px;
+            margin :0;
+        }
+
+        .col-num  {
+            grid-column: span 2;
+        }
+    }
+
+
+    @supports (display: grid) {
+        @media screen and (min-width: 600px) {
+            .grid-wrapper {
+                grid-template-columns: repeat(2, 1fr);
+                grid-template-rows: 3fr 2fr 2fr 3fr;
+            }
+
+            .col-num {
+                grid-column: span 3;
+            }
+
+            .item-1,
+            .item-4 {
+                grid-column: span 2;
+            }
+
+
+        }
+
+
+        .subhead-1 {
+            background-color: lavender;
+            text-align: center;
+        }
+
+        .subhead-1 p, .item-1 p, .item-2 p, .item-3 p, .item-4 p{
+            text-align: left;
+            padding-top: 30px;
+            padding-left: 5px;
+        }
+        .item-1 {
+            background-color: #c394f8;
+            text-align: center;
+        }
+
+        .item-2 {
+            background-color: #c8f4d5;
+        }
+
+        .item-3 {
+            background-color: pink;
+        }
+
+        .item-4 {
+            background-color: skyblue;
+        }
+
+
 }
+    }
+
