--- a/style/about.css
+++ b/style/about.css
@@ -24,7 +24,7 @@ body, main, article, a {
 
 main {
     width: 100%;
-    min-height: 80vh;
+    min-height: 100vh;
     flex-grow: 2;
     justify-content: space-around;
     overflow: hidden;
@@ -88,7 +88,7 @@ article {
     flex-direction: column;
     max-width: 90%;
     padding: calc(6% + 1.9vmin);
-    height: 1200px;
+    height: 1400px;
 }
 
 
@@ -169,6 +169,15 @@ article {
             text-align: center;
         }
 
+        .subhead-1 p{
+            font-size: 1.2em;
+            margin-top: 20px;
+        }
+
+        .subhead-1 h2{
+            margin-top: 40px;
+        }
+
         .subhead-1 p, .item-1 p, .item-2 p, .item-3 p, .item-4 p{
             text-align: left;
             padding-top: 30px;
@@ -179,18 +188,43 @@ article {
             text-align: center;
         }
 
+        .item-1 p {
+            font-size: 1.2em;
+            padding: 20px;
+        }
+
         .item-2 {
             background-color: #c8f4d5;
+        }
+
+        .item-2 p{
+        font-size: 1.2em;
+        }
+
+        .item-2 h2, .item-3 h2, .item-4 h2{
+            text-align: center;
         }
 
         .item-3 {
             background-color: pink;
         }
 
+        .item-3 p, .item-4 p {
+            padding: 20px;
+        }
+
         .item-4 {
             background-color: skyblue;
         }
 
+        .item-3 a, .item-4 a{
+            margin: auto;
+            padding: 10px;
+        }
+
+        .item-3 img, .item-4 img{
+            padding: 20px;
+        }
 
     }
 }
