--- a/style/projets.css
+++ b/style/projets.css
@@ -203,8 +203,22 @@ input[type=radio] {
 .texte p{
     text-align: justify;
     margin: 10px;
-    align-content: center;
-    justify-content: center;
-    justify-items: center;
+}
+
+
+.texte{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
     align-items: center;
 }
+
+
+.texte a {
+    color: black;
+    display: inline;
+    background-color: transparent;
+    margin: auto;
+}
+
+
