--- a/style/footer.css
+++ b/style/footer.css
@@ -60,4 +60,15 @@ footer img {
     flex-direction: row;
     justify-content: space-around;
     color: white;
+    font-size: 1.2em;
+}
+
+
+@media screen and (max-width: 1000px) {
+
+
+   .production p {
+    font-size: 15px;
+   }
+
 }
