--- a/style/about.css
+++ b/style/about.css
@@ -88,7 +88,7 @@ article {
     flex-direction: column;
     max-width: 90%;
     padding: calc(6% + 1.9vmin);
-   max-height: 1600px;
+   /*max-height: 1600px;*/
 }
 
 
@@ -116,6 +116,10 @@ article {
     @media screen and (min-width: 400px) {
         /* Reset height from having an defined to percentage
         and use spans to define size */
+        .flexbox{
+            min-height: 100vh;
+        }
+
         .lrg,
         .med,
         .sm {
