--- a/style/about.css
+++ b/style/about.css
@@ -110,9 +110,7 @@ article {
 }
 
 
-
-
-@supports (display: grid) {
+    @supports (display: grid) {
     @media screen and (min-width: 400px) {
         /* Reset height from having an defined to percentage
         and use spans to define size */
@@ -174,12 +172,13 @@ article {
         }
 
         .subhead-1 p{
-            font-size: 1.2em;
+            font-size: 1.4em;
             margin-top: 20px;
         }
 
         .subhead-1 h2{
             margin-top: 40px;
+            font-size: 2em;
         }
 
         .subhead-1 p, .item-1 p, .item-2 p, .item-3 p, .item-4 p{
@@ -192,43 +191,61 @@ article {
             text-align: center;
         }
 
-        .item-1 p {
-            font-size: 1.2em;
+         .item-1 h3 {
+            margin-top: 20px;
+            font-size: 1.4em;
             padding: 20px;
+            text-align: center;
         }
+
+         .item-1 li{
+            font-size: 1.2em;
+         }
+
 
         .item-2 {
             background-color: #c8f4d5;
         }
 
-        .item-2 p{
-        font-size: 1.2em;
+        .item-2 p {
+            margin-top: 20px;
+            font-size: 1.4em;
+            padding: 40px;
+            text-align: justify;
         }
 
-        .item-2 h2, .item-3 h2, .item-4 h2{
+        .item-1 h2, .item-2 h2, .item-3 h2, .item-4 h2{
             text-align: center;
+            font-size: 1.8em;
+            margin-top: 20px;
         }
 
         .item-3 {
             background-color: pink;
         }
 
-        .item-3 p, .item-4 p {
+        .item-3 p {
             padding: 20px;
+            font-size: 1.3em;
         }
 
         .item-4 {
             background-color: skyblue;
         }
 
-        .item-3 a, .item-4 a{
+        .item-4 a,  .item-4 p {
             margin: auto;
-            padding: 10px;
+            display: flex;
+            flex-direction: row-reverse;
+            font-size: 1.3em;
+            justify-content: center;
         }
 
-        .item-3 img, .item-4 img{
-            padding: 20px;
+        .item-4 img{
+            margin-right: 10px;
+
         }
+
 
     }
 }
